--- a/index.html
+++ b/index.html
@@ -21,11 +21,108 @@
 			<div class="animation">
 				<ul id="slides">
 					<li class="slide1">
-						<div class="satellite-box">
-
-						</div>
-
-
+						<div class="tvoff"></div>
+						<div class="satellite-box"></div>
+						<div class="arrow1"></div>
+						<div id="remote1" class="remote"></div>
+						<div class="pagenumber">1</div>
+						<div class="slidecontent">Take the remote control of your satellite receiver and switch the device on <br>by press the red button on the top left of the remote control.</div>	
+						<ul class="icons anim">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>					
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="animation-box">			
+			<div class="animation">
+				<ul id="slides">
+					<li class="slide2">
+						<div class="tvoff"></div>
+						<div class="satellite-box"></div>
+						<div class="arrow2"></div>
+						<div id="remote2" class="remote"></div>
+						<div class="pagenumber">2</div>
+						<div class="slidecontent">Then, press “menu” button of the remote.</div>
+						<ul class="icons anim">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="animation-box">			
+			<div class="animation">
+				<ul id="slides">
+					<li class="slide2">
+						<div class="tvoff animate"></div>
+						<div class="satellite-box"></div>
+						<div id="remote2" class="remote"></div>
+						<div class="pagenumber">3</div>
+						<div class="slidecontent">On TV screen, select the following items with the arrows and validate by <br>pressing the OK button of the remote control</div>
+						<ul class="icons anim">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="animation-box">			
+			<div class="animation">
+				<ul id="slides">
+					<li class="slide2">
+						<div class="tvoff animate"></div>
+						<div class="satellite-box"></div>
+						<div id="remote2" class="remote"></div>
+						<div class="pagenumber">3</div>
+						<div class="slidecontent">On TV screen, select the following items with the arrows and validate by <br>pressing the OK button of the remote control</div>
+						<ul class="icons anim">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>
 					</li>
 				</ul>
 			</div>
