--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
 		<link rel="stylesheet" media="all" href="css/site.css"/>		
 		<script src="js/site.js"></script>
 		<script src="js/css_browser_selector.js" type="text/javascript"></script>
+
+		<script type='text/javascript' src='src/TweenMax.min.js'></script>
+		<script type='text/javascript' src='src/jquery.gsap.min.js'></script>
+		<script type='text/javascript' src='src/easing/EasePack.min.js'></script>
+
+		<script type='text/javascript' src='js/site.js'></script>
 	
 	</head>
 	<body>
+
+
+
+
+		
 		<div class="animation-box">			
 			<div class="animation">
 				<ul id="slides">
@@ -76,7 +87,7 @@
 		<div class="animation-box">			
 			<div class="animation">
 				<ul id="slides">
-					<li class="slide2">
+					<li class="slide3">
 						<div class="tvoff animate"></div>
 						<div class="satellite-box"></div>
 						<div id="remote2" class="remote"></div>
@@ -103,12 +114,14 @@
 		<div class="animation-box">			
 			<div class="animation">
 				<ul id="slides">
-					<li class="slide2">
-						<div class="tvoff animate"></div>
+					<li class="slide4">
+						<div class="tvon"><div class="screenposition"><div class="screenhidden">
+							<div class="screen"></div>
+						</div></div></div>
 						<div class="satellite-box"></div>
 						<div id="remote2" class="remote"></div>
-						<div class="pagenumber">3</div>
-						<div class="slidecontent">On TV screen, select the following items with the arrows and validate by <br>pressing the OK button of the remote control</div>
+						<div class="pagenumber">4</div>
+						<div class="slidecontent">On TV screen, select the following items with the arrows and validate by pressing the OK button of the remote control Select “set-up”, press OK. Then “signal settings”, press OK Then “Channels Auto-search”, press OK</div>
 						<ul class="icons anim">
 							<li class="icon1"></li>
 							<li class="icon2"></li>
@@ -127,5 +140,96 @@
 				</ul>
 			</div>
 		</div>
+		<div class="animation-box">			
+			<div class="animation">
+				<ul id="slides">
+					<li class="slide5">
+						<div class="tvon"><div class="screenposition"><div class="screenhidden">
+							<div class="screen"></div>
+						</div></div></div>
+						<div class="satellite-box"></div>
+						<div id="remote2" class="remote"></div>
+						<div class="pagenumber">5</div>
+						<div class="slidecontent">Enter your PIN Code. By default “1234” or “0000”. If the code is wrong, please call our customer service before the last attempt andquest a refresh of the smart card. Our customer service agent will provide your further instructions.</div>
+						<ul class="icons anim">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="animation-box">			
+			<div class="animation">
+				<ul id="slides">
+					<li class="slide6">
+						<div class="tvon"><div class="screenposition"><div class="screenhidden">
+							<div class="screen2"></div>
+						</div></div></div>
+						<div id="remote2" class="remote"></div>
+						<div class="pagenumber">6</div>
+						<div class="slidecontent">The scan starts. Press OK when it is completed. <br>You can always refer to the manual of the satellite receiver</div>
+						<ul class="icons anim">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="animation-box">			
+			<div class="animation">
+				<ul id="slides">
+					<li class="slide6">
+						<div class="tvon-final"><div class="screenposition"><div class="screenhidden">
+							<div class="screen3"></div>
+						</div></div></div>
+						<div class="pagenumber">6</div>
+						<div class="slidecontent">The scan starts. Press OK when it is completed. <br>You can always refer to the manual of the satellite receiver</div>
+						<ul class="icons">
+							<li class="icon1"></li>
+							<li class="icon2"></li>
+							<li class="icon3"></li>
+							<li class="icon4"></li>
+							<li class="icon5"></li>
+							<li class="icon6"></li>
+							<li class="icon7"></li>
+							<li class="icon8"></li>
+							<li class="icon9"></li>
+							<li class="icon10"></li>
+							<li class="icon11"></li>
+							<li class="icon12"></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+
+
+
+
+
+
 	</body>
 </html>
