--- a/index.html
+++ b/index.html
@@ -227,7 +227,11 @@
 
 
 
-
+<script type="text/javascript" src="js/src/easing/EasePack.min.js"></script>
+<script type="text/javascript" src="js/src/plugins/CSSPlugin.min.js"></script>
+<script type="text/javascript" src="js/src/TweenMax.min.js"></script>
+<script type='text/javascript' src='js/src/jquery.gsap.min.js'></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
 
